WAD 0.1  - March 23, 2001

   -   Extensive changes to WAD core.  WAD now builds an exception
       object that can be queried and manipulated after a fault
       occurs.

   -   Better collection of debugging information.  WAD is now
       able to determine basic datatypes and other information
       from stabs data.

   -   Better reliability overall.

WAD 0.0 - January, 2001

beazley  - Initial "release".  Not much of a release really.